# WeatherVane

./: .env.example  .gitignore  .ignore  .rgignore  =2.7  ADVERSARIAL_GAMING_DETECTION_REPORT.md  AGENTS.md  AUTOPILOT_DIRECTIVE_REMEDIATION.md  CLAUDE_v1.md  CODEOWNERS  CRASH_FIX_VERIFICATION_REPORT.md  DOCKER_QUICKSTART.md  HOLISTIC_REVIEW_IMPLEMENTATION_COMPLETE.md  MANDATORY_WORK_CHECKLIST.md  Makefile  README.md  TASK_COMPLETION_T12.0.1.md  TASK_M12_DEMO_COMPLETION.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  agent.md  alembic.ini  autopilot_status  claude.md  conftest.py  critics_run  debug_tasks.mjs  docker-compose.yml  fix_all_task_descriptions.py  force_remediation.sh  package-lock.json  package.json  plan_next  pyproject.toml  python-toolchain.toml  requirements-test.txt  run_wvo_autopilot.sh  setup.py  test_gate_file1.ts  test_gate_file2.ts  test_gate_file3.ts  (+4 more)
.codex/: auth.json  config.toml  history.jsonl  version.json
.githooks/: commit_template.txt  post-commit  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.wheels/: apprise-1.9.5-py3-none-any.whl  asgi_lifespan-2.1.0-py3-none-any.whl  black-25.9.0-cp310-cp310-macosx_11_0_arm64.whl  clarabel-0.11.1-cp39-abi3-macosx_11_0_arm64.whl  cvxpy-1.7.3-cp310-cp310-macosx_10_9_universal2.whl  greenlet-3.2.4-cp310-cp310-macosx_11_0_universal2.whl  griffe-1.14.0-py3-none-any.whl  httptools-0.7.1-cp310-cp310-macosx_11_0_arm64.whl  humanize-4.14.0-py3-none-any.whl  jinja2_humanize_extension-0.4.0-py3-none-any.whl  lightgbm-4.6.0-py3-none-macosx_12_0_arm64.whl  markupsafe-3.0.3-cp310-cp310-macosx_11_0_arm64.whl  osqp-1.0.5-cp310-cp310-macosx_11_0_arm64.whl  pendulum-3.1.0-cp310-cp310-macosx_11_0_arm64.whl  pgeocode-0.5.0-py3-none-any.whl  protobuf-6.33.0-cp39-abi3-macosx_10_9_universal2.whl  pydantic_core-2.41.4-cp310-cp310-macosx_11_0_arm64.whl  pygam-0.10.1-py3-none-any.whl  pytest_asyncio-1.2.0-py3-none-any.whl  pytokens-0.2.0-py3-none-any.whl  pyyaml-6.0.3-cp310-cp310-macosx_11_0_arm64.whl  redis-7.0.0-py3-none-any.whl  regex-2025.10.23-cp310-cp310-macosx_11_0_arm64.whl  rpds_py-0.28.0-cp310-cp310-macosx_11_0_arm64.whl  ruamel.yaml.clib-0.2.14-cp310-cp310-macosx_13_0_arm64.whl  scs-3.2.9-cp310-cp310-macosx_11_0_arm64.whl  shapely-2.1.2-cp310-cp310-macosx_11_0_arm64.whl  sqlalchemy-2.0.44-cp310-cp310-macosx_11_0_arm64.whl  uvloop-0.22.1-cp310-cp310-macosx_10_9_universal2.whl  watchfiles-1.1.1-cp310-cp310-macosx_11_0_arm64.whl
alembic/: env.py
apps/: OWNERS.yaml  __init__.py  module.yaml
config/: api-docs.json  inspiration_sites.json  model_feature_catalog.yaml  phase_budgets.yaml  provider_budget_thresholds.json  task_verification.json
dashboards/: feedback_health.html
(+16642 files in other folders)
